assets/css/components/_toolbar.scss
// -------------------------------
// Toolbar
// -------------------------------

.toolbar {
	margin-bottom: rem(10);

	@include media-breakpoint-up(lg) {
		margin-bottom: 0;
		position: fixed;
		top: 0;
		right: 0;
		z-index: 1000;
		height: 100%;
		display: flex;
		align-items: center;
	}

	&__list {
		list-style-type: none;
		padding: 0;
		margin: 0;
		display: flex;
		flex-wrap: wrap;
		overflow-y: auto;
		max-height: 100vh;

		@include media-breakpoint-up(lg) {
			display: inline-block;
		}
	}

	&__item {
		text-align: center;
		margin-right: rem(5);
		margin-top: rem(5);

		@include media-breakpoint-up(lg) {
			margin-top: 0;
			margin-right: 0;
		}

		& + .toolbar__item {
			margin-top: rem(5);
		}

		img {
			height: rem(30);

			@include media-breakpoint-up(lg) {
				height: rem(20);
				margin-bottom: rem(5);
			}
		}

		p,
		button,
		a {
			width: rem(40);
			height: rem(40);
			display: flex;
			justify-content: center;
			align-items: center;
			flex-direction: column;
			text-align: center;
			background-color: $black;
			margin-bottom: 0;
			color: $white;
			@include font-size(9);
			@include line-height(8, 9);
			border: 0;
			padding: 0;

			@include media-breakpoint-up(lg) {
				width: rem(50);
				height: rem(50);
			}

			&:hover {
				text-decoration: none;
			}

			&:disabled {
				background-color: $grey-disabled;
			}

			span {

				@include media-breakpoint-down(md) {
					@include sr-only;
				}
			}
		}

		&--disabled {

			p {
				background-color: $grey-disabled;
			}
		}
	}
}

